--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
-    "start" : "node server.js",
+    "start": "node server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "heroku-postbuild": "cd client && yarn install && yarn build"
   },
@@ -23,12 +23,13 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "morgan": "^1.10.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.1"
+    "mongoose": "^5.10.1",
+    "morgan": "^1.10.0",
+    "react-lazy-load": "^3.1.13"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
